# service_download

./: .env.schema  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  run.py
app/: api_registry.py  config.py  main.py
app/commons/: download_manager.py  locks.py
app/commons/data_providers/: redis.py
app/commons/logger_services/: logger_factory_service.py  namespace_declare.py
app/commons/service_connection/: minio_client.py
app/models/: base_models.py  models_data_download.py
app/resources/: download_token_manager.py  error_handler.py  helpers.py
app/routers/: api_root.py
app/routers/v1/: api_data_download.py
app/routers/v2/: api_data_download.py  api_object_get.py
app/services/approval/: client.py  models.py
kubernetes/: deployment.yaml  greenroom-deployment.yaml  vre-deployment.yaml
tests/: conftest.py  prepare_test.py  test_api.py
tests/commons/: test_download_manager.py  test_locks.py
tests/routers/: test_root.py
tests/routers/v1/: empty.txt  test_api_data_download.py
tests/routers/v2/: test_dataset_download.py  test_dataset_pre_download.py  test_object_get.py  test_pre_downlaod.py
tests/services/approval/: test_client.py  test_models.py
